<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
	
    <artifactId>jain-slee-annotations</artifactId>
	
    <name>JAIN SLEE 1.1 Annotations</name>

    <parent>
        <groupId>mobi.mofokom.jakarta.slee</groupId>
        <artifactId>jain-slee-annotations-parent</artifactId>
        <version>1.0.7-SNAPSHOT</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>mobi.mofokom.jakarta.slee</groupId>
            <artifactId>jain-slee</artifactId>
            <version>1.1</version>
            <type>jar</type>
            <scope>provided</scope>
            <!--
            <exclusions>
                <exclusion>
                    <groupId>javax.transaction</groupId>
                    <artifactId>jta</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.resource</groupId>
                    <artifactId>connector</artifactId>
                </exclusion>
            </exclusions>
-->
        </dependency>
        <dependency>
            <groupId>jakarta.ejb</groupId>
            <artifactId>jakarta.ejb-api</artifactId>
            <version>4.0.1</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>2.1.1</version>
        </dependency>
    </dependencies>
	
    <properties>
        <siteRepo>http://www.mofokom.mobi/maven/${repo}-public</siteRepo>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.target>9</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <!--
                    <attach>true</attach>
                    <addMavenDescriptor>false</addMavenDescriptor>
                    -->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <![CDATA[
                    <fork>true</fork>
                    <compilerArgs>
                        --add-reads=mobi.mofokom.jakarta.jainslee.annotations=ALL-UNNAMED
                    </compilerArgs>
                    ]]>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <configuration>
                    <chmod>true</chmod>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <overview>src/main/java/overview-summary.html</overview>
                </configuration>
            </plugin>
        </plugins>		
    </build>
	
</project>
